--- a/app1/manifest.yaml
+++ b/app1/manifest.yaml
@@ -47,7 +47,7 @@ metadata:
 spec:
   ingressClassName: alb
   rules:
-  - host: "app1.daws78s.online" # ALB Rule
+  - host: "app1.anuprasad.online" # ALB Rule
     http:
       paths:
       - pathType: Prefix
